2006-06-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-gpgmex-util.c: Fix typo which caused
    freeing of in use memory.
    * daemon/seahorse-service-crypto.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-op.c (removed):
    * libseahorse/seahorse-op.h (removed):
    * plugins/applet/seahorse-applet.c:
    * src/main.c:
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-ssh-key-properties.c: Remove seahorse-op.* files.
    No longer necessary.
    * libseahorse/seahorse-vfs-data.c:
    * libseahorse/seahorse-vfs-data.h:
    * src/seahorse-key-manager.c: Show progress dialog when 
    importing keys.

2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c:
    * src/seahorse-ssh-key-properties.c: Quell warnings
    by adding appropriate headers 
    
2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-transfer-operation.c: Don't free data 
    before import operation is complete. Bug #341261
    
2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-default-key-control.c: Fix crash in 
    seahorse-preferences. Bug #333753
    
2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-operation.h:
    * libseahorse/seahorse-pgp-operation.c:
    * libseahorse/seahorse-pgp-operation.h:
    * libseahorse/seahorse-pgp-source.c: Made import and export via
    GPGME be async. Should fix bug #341261
    
2006-05-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-progress.h:
    * libseahorse/seahorse-keyserver-sync.c: Remove duplicate
    code.
    