@@ -1529,6 +1529,7 @@
 			      <property name="fixed_height_mode">False</property>
 			      <property name="hover_selection">False</property>
 			      <property name="hover_expand">False</property>
+			      <signal name="row_activated" handler="on_names_tree_row_activated" last_modification_time="Tue, 16 May 2006 19:01:11 GMT"/>
 			    </widget>
 			  </child>
 			</widget>
