@@ -1,3 +1,10 @@
+2006-05-16  Adam Schreiber  <sadam@clemson.edu>
+
+    * src/seahorse-key-properties.c:
+    * src/seahorse-pgp-private-key-properties.glade:
+    * src/seahorse-pgp-public-key-properties.glade: Double click on key
+    on 'Trust' or 'Names' pages opens the key's properties (Bug #342005).
+
 2006-06-16  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-gpgmex-util.c: Fix typo which caused
